@@ -16,20 +16,23 @@
 
 package swiss.opentransportdata.ojp.adapter.service.api.converter;
 
-import de.vdv.ojp.InternationalTextStructure;
-import de.vdv.ojp.OJPLocationInformationDeliveryStructure;
-import de.vdv.ojp.PlaceStructure;
-import de.vdv.ojp.PointOfInterestCategoryStructure;
-import de.vdv.ojp.StopPlaceStructure;
-import de.vdv.ojp.model.LocationStructure;
-import de.vdv.ojp.model.OJP;
+import de.vdv.ojp.v2.model.AddressStructure;
+import de.vdv.ojp.v2.model.InternationalTextStructure;
+import de.vdv.ojp.v2.model.OJP;
+import de.vdv.ojp.v2.model.OJPLocationInformationDeliveryStructure;
+import de.vdv.ojp.v2.model.PlaceResultStructure;
+import de.vdv.ojp.v2.model.PlaceStructure;
+import de.vdv.ojp.v2.model.PointOfInterestCategoryStructure;
+import de.vdv.ojp.v2.model.StopPlaceStructure;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
+import swiss.opentransportdata.ojp.adapter.OJPAdapter;
 import swiss.opentransportdata.ojp.adapter.OJPException;
+import swiss.opentransportdata.ojp.adapter.model.common.response.Translation;
 import swiss.opentransportdata.ojp.adapter.model.geojson.response.Point;
 import swiss.opentransportdata.ojp.adapter.model.place.response.Address;
 import swiss.opentransportdata.ojp.adapter.model.place.response.Place;
@@ -38,14 +41,14 @@ import swiss.opentransportdata.ojp.adapter.model.place.response.PointOfInterest;
 import swiss.opentransportdata.ojp.adapter.model.place.response.PointOfInterestCategory;
 import swiss.opentransportdata.ojp.adapter.model.place.response.StopPlace;
 import swiss.opentransportdata.ojp.adapter.service.converter.AbstractConverter;
-import swiss.opentransportdata.ojp.adapter.v1.OJPAdapter;
+import uk.org.siri.siri.LocationStructure;
 
 /**
  * @author Peter Hirzel
  */
 @Slf4j
 @Component("OJPPlaceConverter")
-public class PlaceConverter extends AbstractConverter<OJP, PlaceResponse> {
+public class PlaceConverter implements AbstractConverter<OJP, PlaceResponse> {
 
     PlaceConverter() {
         super();
@@ -72,40 +75,39 @@ public class PlaceConverter extends AbstractConverter<OJP, PlaceResponse> {
         final OJPLocationInformationDeliveryStructure ojpLocationInformationDeliveryStructure = OJPAdapter.mapToFirstOJPLocationInformationDeliveryStructure(ojpResponse);
 
         final List<Place> places = new ArrayList<>();
-        // "<ojp:Location>"
-        ojpLocationInformationDeliveryStructure.getLocation().forEach(ojpLocation -> {
-            final PlaceStructure placeStructure = ojpLocation.getLocation();
-            if (placeStructure.getStopPlace() != null) {
-                final StopPlaceStructure stopPlaceStructure = placeStructure.getStopPlace();
-                log.debug("non StopPlace: {}", stopPlaceStructure);
-                places.add(createStopPlace(stopPlaceStructure.getStopPlaceRef().getValue(),
-                    placeStructure.getStopPlace().getStopPlaceName(),
-                    placeStructure.getGeoPosition()));
-            } else if (placeStructure.getPointOfInterest() != null) {
-                log.debug("value={}", placeStructure.getPointOfInterest());
-                places.add(createPointOfInterest(placeStructure.getPointOfInterest().getPointOfInterestCode(),
-                    OJPAdapter.getText(placeStructure.getPointOfInterest().getPointOfInterestName()),
-                    placeStructure.getPointOfInterest().getPointOfInterestCategory(),
-                    placeStructure.getGeoPosition()));
-            } else if (placeStructure.getAddress() != null) {
-                log.debug("value={}", placeStructure.getAddress());
-                places.add(Address.builder()
-                    .id(placeStructure.getAddress().getAddressCode())
-                    .name(/*TODO prefix .getPostCode() ?*/ OJPAdapter.getText(placeStructure.getAddress().getAddressName()))
-                    .centroid(toPoint(placeStructure.getGeoPosition()))
-                    /*
-                    .getTopographicPlaceName()
-                    .getTopographicPlaceRef()
-                     */
-                    .build());
+        ojpLocationInformationDeliveryStructure.getRest().stream()
+            .filter(rest -> rest.getDeclaredType() == PlaceResultStructure.class)
+            .forEach(rest -> {
+            final PlaceResultStructure placeResultStructure = ((PlaceResultStructure) rest.getValue());
+            if (placeResultStructure.getPlace() != null) {
+                final PlaceStructure placeStructure = placeResultStructure.getPlace();
+                if (placeStructure.getStopPlace() != null) {
+                    final StopPlaceStructure stopPlaceStructure = placeStructure.getStopPlace();
+                    log.debug("non StopPlace: {}", stopPlaceStructure);
+                    places.add(createStopPlace(stopPlaceStructure.getStopPlaceRef().getValue(),
+                        stopPlaceStructure.getStopPlaceName(),
+                        placeStructure.getGeoPosition()));
+                } else if (placeStructure.getPointOfInterest() != null) {
+                    log.debug("value={}", placeStructure.getPointOfInterest());
+                    places.add(createPointOfInterest(placeStructure.getPointOfInterest().getPublicCode(),
+                        OJPAdapter.getText(placeStructure.getPointOfInterest().getName()),
+                        placeStructure.getPointOfInterest().getPointOfInterestCategory(),
+                        placeStructure.getGeoPosition()));
+                } else if (placeStructure.getAddress() != null) {
+                    log.debug("value={}", placeStructure.getAddress());
+                    places.add(mapToAddress(placeStructure.getAddress(), placeStructure.getGeoPosition()));
+                } else {
+                    // for e.g. TopographicPlace
+                    throw new OJPException("untreated PlaceRef: " + placeResultStructure);
+                }
             } else {
-                // TopographicPlace
-                throw new OJPException("untreated PlaceRef: " + placeStructure);
+                throw new OJPException("PlaceResultStructure::place==null: " + placeResultStructure);
             }
         });
 
         return PlaceResponse.builder()
             .places(places)
+            .responseTranslation(Translation.mapToLocale(ojpLocationInformationDeliveryStructure.getDefaultLanguage()))
             .build();
     }
 
@@ -134,11 +136,11 @@ public class PlaceConverter extends AbstractConverter<OJP, PlaceResponse> {
     }
 
     static PointOfInterest createPointOfInterest(String poiCode, String name, List<PointOfInterestCategoryStructure> pointOfInterestCategoryStructures, LocationStructure locationStructure) {
-        Set<PointOfInterestCategory> categories = pointOfInterestCategoryStructures.stream()
+        final Set<PointOfInterestCategory> categories = pointOfInterestCategoryStructures.stream()
             // categories: depends on whether OJP uses ROKAS journey-poi service (current PoC), OSM or other
             .map(pointOfInterestCategoryStructure -> PointOfInterestCategory.builder()
-                .type(pointOfInterestCategoryStructure.getOsmTag().get(0).getTag())
-                .name(pointOfInterestCategoryStructure.getOsmTag().get(0).getValue())
+                .type(pointOfInterestCategoryStructure.getOsmTag().getFirst().getTag())
+                .name(pointOfInterestCategoryStructure.getOsmTag().getFirst().getValue())
                 .build())
             .collect(Collectors.toSet());
         return PointOfInterest.builder()
@@ -146,6 +148,19 @@ public class PlaceConverter extends AbstractConverter<OJP, PlaceResponse> {
             .name(name)
             .centroid(toPoint(locationStructure))
             .categories(categories)
+            .build();
+    }
+
+    static Address mapToAddress(AddressStructure addressStructure,  LocationStructure locationStructure) {
+        return Address.builder()
+            .id(OJPAdapter.getText(addressStructure.getName()))
+            // TODO check not blank
+            .name(addressStructure.getPostCode() + " " /*TODO + addressStructure.getCity()*/ + ", " + addressStructure.getStreet() + " " + addressStructure.getHouseNumber())
+            .centroid(toPoint(locationStructure))
+            /*
+            .getTopographicPlaceName()
+            .getTopographicPlaceRef()
+             */
             .build();
     }
 
